--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -164,13 +164,17 @@
                 <form>
                   <div class="form-group">
                     <label class="d-block">Đơn hàng của tôi</label>
-                    <ul class = "table-responsive" style = "position:absolute;display: inline-flex">
-                      <li>Mã đơn hàng</li>
-                      <li>Ngày mua</li>
-                      <li>Sản phẩm</li>
-                      <li>Tổng tiền</li>
-                      <li>Ngày mua</li>
-                    </ul>
+                    <table class="form-table" style="width:100%">
+                      <thead class="form-thead">
+                        <tr>
+                          <td>Mã đơn hàng</td>
+                          <td>Ngày mua</td>
+                          <td>Sản phẩm</td>
+                          <td>Tổng tiền</td>
+                          <td>Ngày mua</td>
+                        </tr>
+                      </thead>
+                    </table>
                   </div>
                 </form>
                 <hr> 
