--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -199,7 +199,8 @@
 			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
 				<div class="product">
-					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="Product">
+					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
+							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
@@ -250,7 +251,8 @@
 			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
 				<div class="product">
-					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="Product">
+					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
+							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
@@ -296,7 +298,8 @@
 			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
 				<div class="product">
-					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="Product">
+					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
+							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
@@ -331,19 +334,24 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm ftco-animate">
-				<a href="#" class="partner"><img src="{% static 'images/partnerstore-1.png' %}" class="img-fluid" alt="Partner 1"></a>
+				<a href="#" class="partner"><img src="{% static 'images/partnerstore-1.png' %}" class="img-fluid"
+						alt="Partner 1"></a>
 			</div>
 			<div class="col-sm ftco-animate">
-				<a href="#" class="partner"><img src="{% static 'images/partnerstore-2.png' %}" class="img-fluid" alt="Partner 2"></a>
+				<a href="#" class="partner"><img src="{% static 'images/partnerstore-2.png' %}" class="img-fluid"
+						alt="Partner 2"></a>
 			</div>
 			<div class="col-sm ftco-animate">
-				<a href="#" class="partner"><img src="{% static 'images/partnerstore-3.jpg' %}" class="img-fluid" alt="Partner 3"></a>
+				<a href="#" class="partner"><img src="{% static 'images/partnerstore-3.jpg' %}" class="img-fluid"
+						alt="Partner 3"></a>
 			</div>
 			<div class="col-sm ftco-animate">
-				<a href="#" class="partner"><img src="{% static 'images/partnerstore-4.jpg' %}" class="img-fluid" alt="Partner 4"></a>
+				<a href="#" class="partner"><img src="{% static 'images/partnerstore-4.jpg' %}" class="img-fluid"
+						alt="Partner 4"></a>
 			</div>
 			<div class="col-sm ftco-animate">
-				<a href="#" class="partner"><img src="{% static 'images/partnerstore-5.png' %}" class="img-fluid" alt="Partner 5"></a>
+				<a href="#" class="partner"><img src="{% static 'images/partnerstore-5.png' %}" class="img-fluid"
+						alt="Partner 5"></a>
 			</div>
 		</div>
 	</div>
