--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -89,15 +89,14 @@
 			{% for relative_product in relative_products %}
 			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="product">
-					<a href="#" class="img-prod"><img class="img-fluid" src="{{ relative_product.image.url | slice:"10:" }}"
-							alt="anh-san-pham">
+					<a href="#" class="img-prod"><img class="img-fluid"
+							src="{{ relative_product.image.url | slice:"10:" }}" alt="anh-san-pham">
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
 						<h3><a href="#">{{ relative_product.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
-								<p class="price"><span
-										class="price-sale">{{ relative_product.price }}</span></p>
+								<p class="price"><span class="price-sale">{{ relative_product.price }}</span></p>
 							</div>
 						</div>
 						<div class="bottom-area d-flex px-3">
@@ -209,7 +208,7 @@
 				</div>
 			</div>
 		</div>  -->
-	</div>
+		</div>
 </section>
 
 {% endblock %}
