--- a/DiChoHo/templates/category.html
+++ b/DiChoHo/templates/category.html
@@ -112,7 +112,7 @@
             <div class="d-flex">
               <div class="pricing">
                 <p class="price">
-                  <span class="mr-2 price-dc" style="text-decoration: none;">{{ product.price }}</span>
+                  <span>{{ product.price }}</span>
                 </p>
               </div>
             </div>
